# sweetmarket_mobile

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/controllers/: cart_controller.rs  mod.rs  product_controller.rs  rating_controller.rs  user_controller.rs
backend/src/middleware/: auth_middleware.rs  await_handler_factory.rs  error_middleware.rs  mod.rs
backend/src/middleware/validators/: mod.rs  user_validator_middleware.rs  wallet_validator_middleware.rs
backend/src/models/: cart_model.rs  mod.rs  payments_model.rs  product_model.rs  rating_model.rs  user_model.rs
backend/src/routes/: cart_routes.rs  mod.rs  payment_routes.rs  product_routes.rs  rating_routes.rs  user_routes.rs
backend/src/services/: bank_transfer.rs  emailer_service.rs  ieo_service.rs  mod.rs  p2p_service.rs  subscriber_service.rs  user_service.rs  wallet_service.rs
backend/src/utils/: common_utils.rs  constants_utils.rs  email_type.rs  http_exception.rs  mod.rs  polygon.rs  user_roles.rs  wallet_utils.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/auth/: forgot_password_screen.dart  login_screen.dart  register_screen.dart  reset_password_screen.dart
lib/pages/: about.dart  home.dart  index.dart  market.dart
lib/services/: index.dart
lib/services/models/: links.dart  (+3 more)
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
